dipole-20110325
+ new short-range potential (Buckingham) now available for electrostatic

devel-live
+ update comments
+ revert the r=0 fix in spline calculation
+ make simann the default algorithm for all potentials, evo is still
  available via _evo_ compile option
+ comments are now allowed in potential files between blocks, starting with #
+ [ADP] fix writing for the quadrupole potential for systems with more than one atom type

dipole-20110309
+ enhanced output for dipole-convergency 

devel-20101221
+ [APOT] fix bug with chemical potentials and global parameters
+ [EVO] change initialization for tabulated potentials
+ timing information is now shown if output_prefix is not set

--> POTFIT-20101207 released

devel-20101207
+ properly check for the correct potential types
+ remove some unneeded variables

devel-20101201
+ increase the epsilon for the powell_lsq from 0.0001 to 0.001
+ added line numbers for errors in config files
+ error() and warning() functions can now be used with arguments like printf

devel-20101122
+ change weights once more from w*d^2 to (w*dx)^2
+ adjust dummy constraints output for console
+ limit number of cpus to nconf

devel-20101108
+ revert the normalization of energy and stress weights
+ small technical changes

dipole-20101025
+ COULOMB and DIPOLE are now working with mpi

devel-20101018
+ fix strcpy bug with stresses
+ cutoff radius for embedding function is now read from potential file
+ energy and stress weight normalized:
  if both are set to 1. then the energy is equally
  weighted as the forces and as the stresses
  (effectively the squared energy difference is multiplied by
   eng_weight * 3 * atoms_in_configuration)
+ added timing information from dipole tree

devel-20101006
+ remove some redundant header files
+ many bugs in new optimization algorithm fixed

devel-20101004
+ add exp_plus potential
+ sorted potfit.h and added a few comments, read_apot_table -> read_pot_table0