@@ -1,3 +1,6 @@
+dipole-20110328
++ new outout coul2imd now available
+
 dipole-20110325
 + new short-range potential (Buckingham) now available for electrostatic
 
